--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -53,9 +53,9 @@
             margin-right: 3%;
         }
         &__logo{
+            margin-left: 5%;
             &--withBtn{
                 order: 1;
-                margin-left: 3%;
             }
         }
         &__location{
